--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://Martin-Ocean.github.io/ITEC4010N",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
@@ -40,6 +43,7 @@
   "devDependencies": {
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^11.1.0",
+    "gh-pages": "^6.3.0",
     "terser-webpack-plugin": "^5.3.11"
   }
 }
