--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -2,32 +2,32 @@ name: Deploy React App to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [master]
   pull_request:
-    branches: [ main ]
+    branches: [master]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout 🛎️
-      uses: actions/checkout@v3
-    
-    - name: Use Node.js 🔧
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
-        cache: 'npm'
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-    - name: Install Dependencies 📦
-      run: npm ci
+      - name: Use Node.js 🔧
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+          cache: "npm"
 
-    - name: Build 🏗️
-      run: npm run build
+      - name: Install Dependencies 📦
+        run: npm ci
 
-    - name: Deploy to GitHub Pages 🚀
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+      - name: Build 🏗️
+        run: npm run build
+
+      - name: Deploy to GitHub Pages 🚀
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
